--- a/.github/workflows/frontendworkflow.yml
+++ b/.github/workflows/frontendworkflow.yml
@@ -2,7 +2,7 @@ name: Deploy frontend to Azure Static Web Apps
 
 on:
   push:
-    branches: [ main ]     # no path filters -> always deploy on main pushes
+    branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
@@ -19,7 +19,7 @@ jobs:
       deployments: write
 
     env:
-      # Use repo Variables if present; otherwise fall back to your backend URL
+      # Optional: set your API base for the build if you use it
       VITE_API_BASE: ${{ vars.VITE_API_BASE || 'https://forecasting-ai-powered-ddarbmdqe3dzdccg.canadacentral-01.azurewebsites.net/api' }}
 
     steps:
@@ -30,7 +30,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: npm
           cache-dependency-path: frontend/package-lock.json
 
       - name: Build (Vite)
@@ -42,10 +42,10 @@ jobs:
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
+          action: upload
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          # Source and output locations
+          # We already built, so just point to the artifact
           app_location: frontend
-          output_location: dist
-          # We already built above, so skip build here
+          app_artifact_location: frontend/dist
           skip_app_build: true
+          production_branch: main
