--- a/.github/workflows/frontendworkflow.yml
+++ b/.github/workflows/frontendworkflow.yml
@@ -24,7 +24,6 @@ jobs:
       - name: Build (inject API base for Vite)
         working-directory: frontend
         env:
-          # put this in a repo secret if you prefer
           VITE_API_URL: https://forecasting-ai-powered-ddarbmdqe3dzdccg.canadacentral-01.azurewebsites.net
         run: npm run build
 
@@ -33,6 +32,6 @@ jobs:
         with:
           azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }}
           action: upload
-          app_location: frontend/dist      # <— DEPLOY THE BUILD OUTPUT
-          skip_app_build: true             # we already built
+          app_location: frontend/dist   # deploy the build output
+          skip_app_build: true
           skip_api_build: true
