--- a/.github/workflows/main_forecasting-ai-powered.yml
+++ b/.github/workflows/main_forecasting-ai-powered.yml
@@ -1,52 +1,33 @@
-name: Build and deploy Python app to Azure Web App - forecasting-ai-powered
+# .github/workflows/backend-deploy.yml
+
+name: Deploy backend (Flask) to Azure Web App - forecasting-ai-powered
 
 on:
   push:
     branches: [ main ]
-    paths:
-      - 'backend/**'
+    paths: [ 'backend/**' ]   # only run when backend changes
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
-    permissions: { contents: read }
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      # Optional: sanity check your requirements locally on the runner.
+      # (This does not affect what is deployed; it just catches bad reqs early.)
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'    # Use a version Azure supports; 3.13 is not broadly supported yet
+          python-version: '3.11'
 
-      - name: Create and start virtual environment
-        working-directory: backend
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-
-      - name: Install dependencies
+      - name: Install backend dependencies (sanity check)
         working-directory: backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-app
-          path: backend/            # upload only backend
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: backend-app
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -58,6 +39,6 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'forecasting-ai-powered'
+          app-name: 'forecasting-ai-powered'   # your App Service name
           slot-name: 'Production'
-          package: '.'              # artifact root now *is* backend
+          package: backend                      # deploy ONLY the backend folder
