--- a/.github/workflows/main_forecasting-ai-powered002.yml
+++ b/.github/workflows/main_forecasting-ai-powered002.yml
@@ -11,15 +11,15 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     steps:
       - uses: actions/checkout@v4
 
-      # Use a supported Python version for App Service
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      # (Optional) verify requirements resolve; helpful to fail fast if broken
       - name: Install backend dependencies
         working-directory: backend
         run: |
@@ -35,6 +35,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    permissions:
+      id-token: write          # <-- REQUIRED for OIDC
+      contents: read
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -53,5 +56,4 @@ jobs:
         with:
           app-name: 'forecasting-ai-powered'
           slot-name: 'Production'
-          # Deploy just the backend folder (action will zip it for you)
           package: backend
